Implement thumbnail, lastEdited field and fix bug in freelancer template 0

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,8 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+html {
+    --scroll-behavior: smooth!important;
+    scroll-behavior: smooth!important;
+}
